# zimobills

./: index.html  style.css  styles.css
nrwb-api/: pyproject.toml  requirements.txt
nrwb-api/app/: main.py
nrwb-mobile/: App.tsx  app.json  package.json  tsconfig.json
nrwb-mobile/src/navigation/: RootNavigator.tsx  Tabs.tsx
nrwb-mobile/src/screens/: AnnouncementsScreen.tsx  BillCalculatorScreen.tsx  BillsScreen.tsx  ComplaintsScreen.tsx  FaultReportScreen.tsx  HomeScreen.tsx  TipsScreen.tsx  TokensScreen.tsx
nrwb-mobile/src/services/: storage.ts
nrwb-mobile/src/theme/: theme.ts
nrwb-web/: announcements.html  bills.html  calculator.html  complaints.html  faults.html  index.html  tips.html  tokens.html
nrwb-web/css/: styles.css
