[tool.poetry]
name = "nrwb-api"
version = "0.1.0"
description = "NRWB Customer Service API"
authors = ["NRWB"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
sqlalchemy = "^2.0.32"
sqlite-utils = "^3.37"
pydantic = "^2.9.2"
python-multipart = "^0.0.9"
Jinja2 = "^3.1.4"

[tool.poetry.group.dev.dependencies]
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
